--- a/chapter1.tex
+++ b/chapter1.tex
@@ -159,7 +159,7 @@ In a better approximation, justified below, R is replaced in the above relation 
 \approx 18.105 Gly$, where $m_{N} = am^{e}$ is the Nambu mass, of central importance in particle
 physics. Indeed, the half radius $R\prime/2$ has a simpler definition than $R/2$: it corresponds to the
 elimination of c between the classical electron radius and the Planck length. In this way, the sphere
-of radius R\prime appears as the spherical hologram representation of the outer Grandcosmos:
+of radius $R\prime$ appears as the spherical hologram representation of the outer Grandcosmos:
 $$S\prime_{BH} = \pi(R\prime/l_{P} )^{2} = 2\pi R_{GC} /l_{P}$$
 This value will be dramaticaly confirmed in the section I.IV.
 Assuming the Toponic Quantification Hypothesis, the mass of a particle is an exact sub-multiple
@@ -218,13 +218,13 @@ Rydbergh correction factor and $p_{0} = 6\pi^{5}$ the Canonic Lenz-Wiler Approxi
 $R_{1} = ( p_{0} /p_{G} ) \sqrt{(\beta R R\prime)}$.
 
 Now, with the Kotov length $l_{K} = ct_{K}$ , see below, one notes that $\sqrt{(R/a w l K )}$ is close to \sqrt{a}, while
-the replacement of R by R_{1} is about 4 π , the canonical form for \sqrt{a}, the deviation being compatible
+the replacement of R by $R_{1}$ is about 4 π , the canonical form for $\sqrt{a}$, the deviation being compatible
 with $p/p_{0}$ , where $p_{0} = 6π^{5}$ is the Lenz-Wyler approximation for p (Section III.I):
 $$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4π p/p0 \Leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from G. 
 
 This $t_K$ value will be confirmed, in the ppb range, by the value
 deduced from $t_{K} /t_{e} = \sqrt{(a_{G} a_{w})}$, see below, using values of $a_{w} and a_{G}$ connecting, again in the ppb
-range, with \Gamma, the Atiyah Constant (section III.V).
+range, with $\Gamma$, the Atiyah Constant (section III.V).
 From the Holographic two-step interaction [3], it was deduced that the Kotov period is
 associated with the photon mass. With the above value, it is $$m_{ph} = \lambdabar/c 2 t_{K} ≈ 1.222 \times 10^{-55} kg$$, the
 graviton mass being $$m_{gr} = m_{ph} /a__{w} \approx 3.722 \times 10^{-67} kg$$. The corresponding ratioes with electron mass(Fig.1) corresponds respectively to n = 24 and n = Γ , the Atiyah constant, see Section III.VIII.
@@ -236,7 +236,7 @@ violate the most basic prerequisite of physics, the generality of Doppler phenom
 this as a tachyonic phenomena, we identified the Kotov period $t_{K} \simeq 9600.06(2) s$, taking the electron
 characteristic time $t_{e} = \lambdabar_{e} /c$ as unit, to the simplest relation eliminating c between $a_{G}$ and $a_{w}=
 \hbar 3 /G_{F} m_{e}^{2} c$, the well measured $10^{-7}$ dimensionless electroweak coupling constant $a_{w}$ :
-t_{K} / t_{e} = \sqrt{(a_{G} a_{w})}
+$$t_{K} / t_{e} = \sqrt{(a_{G} a_{w})}$$
 The weak coupling constant [1] $a_{w} = (E_{F} /m_{e} c^{2} )^{2}$ is defined from the Fermi energy $E_{F} \approx
 292.806161(6) GeV \approx 573007.33(25) m_e c^{2}$ , itself tied to the weak force constant $$G_{F} \equiv (\hbar c)^{3} /E_{F}^{2} \approx
 1.4358509(7) \times 10^{-62} Joule \cdot m^3 $$[10]. This introduces the product of two area speeds, confirming the
@@ -309,8 +309,8 @@ space; for details see Kotov, 2018).
 Recently it was shown, that the $t_{\Tetha}$ timescale characterizes, statistically, the motion of superfast
 exoplanets too, see Figure 5.
 It was shown in fact, that a number of superfast, with periods < 2 days, exoplanets revolve
-around parent stars with periods, near-commensurate with timescales t_{1} and/or 2 t_{1} /π, where t_{1} =
-9603(85) s agrees fairly well with the period $t_{K} \approx 9600$ s of the so-called «cosmic oscillation», found
+around parent stars with periods, near-commensurate with timescales $t_{1}$ and/or $2 t_{1}/\pi$, where $t_{1} =
+9603(85) s$ agrees fairly well with the period $t_{K} \approx 9600$ s of the so-called «cosmic oscillation», found
 firstly in the Sun, then – in other variable objects of the Universe (the probability that the two
 timescales would coincide by chance is near $3 \cdot 10^{-4}$).
 
@@ -357,7 +357,7 @@ speed v 1 is compatible with $c/v 1 \approx \sqrt{a_{w} /a} = F/a$, correspondin
 The Halton Arp observations of chains of galaxies with different redshifts [15] was also
 rejected. But it could be the sign of the galactic regeneration maintaining constant the visible
 Universe mass: this is confirmed by the following confirmation of the invariance of the mean mass
-density ρ c .
+density $\rho_{c}$ .
 Much controversial is the Pioneer deceleration [16] $$g_{Pi} \approx 8.7 \times 10^{-10} ms^{-2}$$ . This corresponds to
 the Pioneer time $$t_{Pi} = c/g_{Pi} \approx 3.4 \times 10^{17} s$$, close to $$t = R/c \approx 4.3587 \times 10^{17} s$$. The following section will show a connexion between the Kotov, Tifft and Pioneer effects.
 
@@ -387,20 +387,20 @@ domains, because there is no real mathematical foundation, apart the above essen
 in virtue of the above Hierarchy Principle, the lack of theoretical justification is not a reason to
 neglect Prospective Dimensional Analysis.
 Now, the elimination of c in the above R formula means that the simplest basic dimensional
-analysis starting from \hbar, G and m, the Electron-Proton-Neutron mean mass gives a good
+analysis starting from $\hbar$, G and m, the Electron-Proton-Neutron mean mass gives a good
 approximation for R/2. Indeed, in the Hypothesis of a Coherent Cosmos, it is logical to discard c
 which is far two small a speed. This has not been observed during one century, since c is always
 believed to be the single mandatory foundation of Space-Time. The warning of Poincaré, the true
 discoverer of Relativity: 'use 4D space but do not confound Space and Time' has long been
 forgotten, and physicist have unwisely put c = 1 in their equations.
 In his three first minutes of cosmology, one of the author obtained the length:
-$$l (\hbar,G,m) = \hbar 2 /Gm 3 \approx R/2$$
+$$l (\hbar,G,m) = \hbar 2 /Gm^{3} \approx R/2$$
 but it took 9 years to get this published [12], and it appeared later [3] that m must be considered more precisely as the cubic root of the product $m_{e} \cdot m_{p} \cdot m_{H}$ . Moreover, the above critical condition
-links the time $t = frac{R}{c}$ and the mean mass density by the c-free formula $$ρ_{c} = 3/8\pi Gt^{2} \approx 9.41198 \times
-10^{-27} kg m^{-3}$$ , So the mainstream idea of a temporal variability of the mean density ρ c cannot be to
+links the time $t = frac{R}{c}$ and the mean mass density by the c-free formula $$\rho_{c} = 3/8\pi Gt^{2} \approx 9.41198 \times
+10^{-27} kg m^{-3}$$ , So the mainstream idea of a temporal variability of the mean density $\rho_{c}$ cannot be to
 sustain, meaning that ρ c must be considered as a fundamental constant. This writes:
-$$t{\hbar,ρ_{c} ,G} = 1/ρ c1/2 G 1/2 = (R/c) (8\pi/3)^{1/2}$$
-This idea of ρ c being a fundamental constant permits to define R without any ambiguity: the
+$$t{\hbar,\rho_{c} ,G} = 1/\rho_{c}^{1/2} G^{1/2} = (R/c) (8\pi/3)^{1/2}$$
+This idea of $\rho_{c}$ being a fundamental constant permits to define R without any ambiguity: the
 radius containing a critical mass. This means each point is the center of an equivalent black hole,
 justifying the above application of the Bekenstein-Hawking entropy. Opponents would say that the
 center of a black hole presents a singularity: that is indeed the case in the above flickering Space-
@@ -409,10 +409,10 @@ horizon, but it must be reckognized that Relativity is a local theory, so do not
 Indeed, even General Relativity in unable to define what is a Galilean frame, while the Foucault
 pendulus shows it directly, realizing the Cosmic Microwave Background frame, identified with the
 Grandcosmos frame, as seen above.
-Introducing the Fermi constant G_{F} , the associated c-free length is very particular, to $1.7\%$:
-$$l{\hbar,ρ_{c} ,G_{F} } = \hbar/ρ_{c}^{1/2} G_{F}^{1/2} \approx 9.07154 10^{9} m \approx \lambdabar_{e}^{2}/l_{P}$$
+Introducing the Fermi constant $G_{F}$ , the associated c-free length is very particular, to $1.7\%$:
+$$l{\hbar,\rho_{c} ,G_{F} } = \hbar/ρ_{c}^{1/2} G_{F}^{1/2} \approx 9.07154 10^{9} m \approx \lambdabar_{e}^{2}/l_{P}$$
 Now, the following mandatory c-free times are close each over to $0.7\%$:
-$$T{\hbar,ρ_{c} ,G_{F} } = \hbar^{4} /ρ_{c}^{3/2} G_{F}^{5/2} \approx 5.4829 \cdot 10^{57} s$$
+$$T{\hbar,\rho_{c} ,G_{F} } = \hbar^{4} /ρ_{c}^{3/2} G_{F}^{5/2} \approx 5.4829 \cdot 10^{57} s$$
 $$T\prime{\hbar,G,m} = \hbar^{3} /G^{2} m^{5} \approx 5.5224 \times 10^{57} s$$
 This would be the periodic time of a Cycling Cosmos, which corresponds in the Topological Axis to
 the holic dimension (see below) n = 30, to 4\%. Comparing T with the Kotov Non-Doppler Cosmic
