--- a/chapter1.tex
+++ b/chapter1.tex
@@ -163,7 +163,7 @@ of radius $R\prime$ appears as the spherical hologram representation of the oute
 $$S\prime_{BH} = \pi(R\prime/l_{P} )^{2} = 2\pi R_{GC} /l_{P}$$
 This value will be dramaticaly confirmed in the section I.IV.
 Assuming the Toponic Quantification Hypothesis, the mass of a particle is an exact sub-multiple
-of the mass-equivalent M of the visible Universe: $m = M/N_{m}$ , and its canonical wavelength is N m ƛ M ,
+of the mass-equivalent M of the visible Universe: $m = M/N_{m}$ , and its canonical wavelength is $N m \lambdabar M$ ,
 allowing the following holographic extension of the above mono-radial holographic conservation:
 $S_{BH} = \pi(R/l_{P})^{2} = 2\piR/\lambdabar_{M} = 2\pi N_{m_{R}}/\lambdabar_{m}$
 This series of large circles generates, by scanning, the approximation of a sphere: one thus passes
@@ -174,14 +174,14 @@ analysis, such as π (See Section III).
 The immensity of the Cosmos thus receives a much simpler computo-holographic explanation than
 that of standard cosmology, where initial conditions, during Planck's time, would be adjusted with
 extreme precision, even with inflation. By identifying the large number of Eddington $N_{Ed} = 136 \cdot
-2^{256}$ as the equivalent number of neutrons in the effective mass 3M/10 this leads to R ≈ 13,805
-Gly at $0.05\%$of the above value.
+2^{256}$ as the equivalent number of neutrons in the effective mass 3M/10 this leads to $R \approx 13,805
+Gly$ at $0.05\%$of the above value.
 In the Hydrogen gravitational molecule model, R is defined by the following 1D-2D-3D Special
 Holographic Relation, where the wavelengths of the Electron, Proton, and Atomic and Molecular
 Hydrogen apear, as well as that of the background radiation
 $2 \pi R/\lambdabar_{e} = 4 \pi \lambdabar_{p} \lambdabar_{H} /l_{P} 2 \simeq (4\pi/3)(\lambdabar_{CMB} /\lambdabar_{H2})^{3}$
 The above relation gives $T_{CMB} \simeq 2.73 K$. With the measured temperature of the cosmic
-background, there is a gap compatible with $(H/p G ) 2 p/6\pi 5 $, where $p G 2 = P 2 /2^{127}$ , with $P = \lambdabar_{e} /l_{P}$, . 
+background, there is a gap compatible with $(H/p G ) 2 p/6\pi 5 $, where $p_{G}^{2} = P^{2} /2^{127}$ , with $P = \lambdabar_{e} /l_{P}$, . 
 This eliminates $l_{P}$ , so gives a relation independent of G:
 $$2^{127} = 2\pi 2 \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H} 2$$
 => $θ_{CMB} = 2.725820805$ Kelvin which is the surface of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H} 2 )^{1/3} $, proving the relevance of
@@ -266,7 +266,7 @@ characteristics respectively of a stellar system and a galaxy, see Fig.1. As the
 attributed to an earth orbital oscillation due to Jupiter effects, this suggests that the solar system is
 tied to cosmic influence. Indeed, the Kotov period shows itself rather particular in the solar system.
 In particular, the Uranus orbital radius is very close to the Kotov length $l_{K} = ct_{K}$ .
-Remarkable enough, a «mysterious» period ≈ 1/9 days of the Sun's pulsations has been predicted
+Remarkable enough, a «mysterious» period $\approx 1/9$ days of the Sun's pulsations has been predicted
 long before its actual discovery in 1974. Namely, 73 years ago, French amateur astronomer Sevin
 (1946) claimed that « la période propre de vibration du Soleil, c'est-à-dire la période de son infra-
 son (1/9 de jour), a joué un rôle essentiel dans la distribution des planètes supérieures». Presumably,
@@ -280,7 +280,7 @@ thus the $t_{K}$ oscillation of the Sun should be regarded as an artifact (see, 
 Fossat et al., 2017). As a matter of fact, however, the t_K period occurs to be the best commensurate
 timescale for the spin rates of all the most massive and fast-rotating bodies of the solar system, in
 general.
-This is evident from Fig. 2, which shows the resonance spectrum F(\nu), calculated for 15
+This is evident from Fig. 2, which shows the resonance spectrum $F(\nu)$, calculated for 15
 motions of 12 largest, fast spinning, objects of the system (with the mean diameters ≥ 500 km and
 periods < 2 days: six planets, three asteroids and three satellites, leaving apart trans-neptunian
 objects; see Kotov, 2018). The peak of the best commensurability corresponds to a period of
@@ -300,7 +300,7 @@ variables and related objects. The major peak, with C.L. of about 7σ, correspon
 binary stars catalogues and original papers).
 To compute the $F_{1} (\nu)$ spectrum, the program finds – for each test frequency ν – deviations of
 ratios $(2\nu i /\pi \nu) k ≥ 1$ from the nearest integers, and determines then the least-square minimum of such
-deviations. Here ν is the test frequency, ν_{i} – the frequency of a given object, i = 1, 2, ...N – the
+deviations. Here $\nu$ is the test frequency, $ν_{i}$ minus the frequency of a given object, i = 1, 2, ...N – the
 ordinal number, with N, the total number of observed periods in a sample of objects, and the power
 k = 1 or –1. The factor of two in Eq. (2) takes into account that second half of the orbit repeats the
 first one, and the transcendental number π appears as a factor of orbital stability, or «ideal»
