--- a/chapter1.tex
+++ b/chapter1.tex
@@ -165,16 +165,16 @@ This value will be dramaticaly confirmed in the section I.IV.
 Assuming the Toponic Quantification Hypothesis, the mass of a particle is an exact sub-multiple
 of the mass-equivalent M of the visible Universe: $m = M/N_{m}$ , and its canonical wavelength is $N m \lambdabar M$ ,
 allowing the following holographic extension of the above mono-radial holographic conservation:
-$S_{BH} = \pi(R/l_{P})^{2} = 2\piR/\lambdabar_{M} = 2\pi N_{m_{R}}/\lambdabar_{m}$
+$$S_{BH} = \pi(R/l_{P})^{2} = \frac{2\pi \cdot R}{\lambdabar_{M}} = \frac{2\pi \cdot N_{m}\ cdot R}{\lambdabar_{m}}$$
 This series of large circles generates, by scanning, the approximation of a sphere: one thus passes
-from the Disk to the Sphere. Note that this justifies the factor 1⁄4 in the above BH entropy. But, for
-the approximation to be sufficient, the numbers N m must be very large. In this way, the Cosmos-
+from the Disk to the Sphere. Note that this justifies the factor $1⁄4$ in the above BH entropy. But, for
+the approximation to be sufficient, the numbers $N_{m}$ must be very large. In this way, the Cosmos-
 Computer can use the computational properties of the mathematical constants of the continuous
-analysis, such as π (See Section III).
+analysis, such as $\pi$ (See Section III).
 The immensity of the Cosmos thus receives a much simpler computo-holographic explanation than
 that of standard cosmology, where initial conditions, during Planck's time, would be adjusted with
 extreme precision, even with inflation. By identifying the large number of Eddington $N_{Ed} = 136 \cdot
-2^{256}$ as the equivalent number of neutrons in the effective mass 3M/10 this leads to $R \approx 13,805
+2^{256}$ as the equivalent number of neutrons in the effective mass $3M/10$ this leads to $R \approx 13,805
 Gly$ at $0.05\%$of the above value.
 In the Hydrogen gravitational molecule model, R is defined by the following 1D-2D-3D Special
 Holographic Relation, where the wavelengths of the Electron, Proton, and Atomic and Molecular
@@ -183,7 +183,7 @@ $2 \pi R/\lambdabar_{e} = 4 \pi \lambdabar_{p} \lambdabar_{H} /l_{P} 2 \simeq (4
 The above relation gives $T_{CMB} \simeq 2.73 K$. With the measured temperature of the cosmic
 background, there is a gap compatible with $(H/p G ) 2 p/6\pi 5 $, where $p_{G}^{2} = P^{2} /2^{127}$ , with $P = \lambdabar_{e} /l_{P}$, . 
 This eliminates $l_{P}$ , so gives a relation independent of G:
-$$2^{127} = 2\pi 2 \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H} 2$$
+$$2^{127} = 2\pi^{2} \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H} 2$$
 => $θ_{CMB} = 2.725820805$ Kelvin which is the surface of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H} 2 )^{1/3} $, proving the relevance of
 the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$ , (see Section III). Recall
 that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
@@ -220,14 +220,14 @@ $R_{1} = ( p_{0} /p_{G} ) \sqrt{(\beta R R\prime)}$.
 Now, with the Kotov length $l_{K} = ct_{K}$ , see below, one notes that $\sqrt{(R/a w l K )}$ is close to \sqrt{a}, while
 the replacement of R by $R_{1}$ is about 4 π , the canonical form for $\sqrt{a}$, the deviation being compatible
 with $p/p_{0}$ , where $p_{0} = 6π^{5}$ is the Lenz-Wyler approximation for p (Section III.I):
-$$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4π p/p0 \Leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from G. 
+$$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \Leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from G. 
 
 This $t_K$ value will be confirmed, in the ppb range, by the value
 deduced from $t_{K} /t_{e} = \sqrt{(a_{G} a_{w})}$, see below, using values of $a_{w} and a_{G}$ connecting, again in the ppb
 range, with $\Gamma$, the Atiyah Constant (section III.V).
 From the Holographic two-step interaction [3], it was deduced that the Kotov period is
 associated with the photon mass. With the above value, it is $$m_{ph} = \lambdabar/c 2 t_{K} ≈ 1.222 \times 10^{-55} kg$$, the
-graviton mass being $$m_{gr} = m_{ph} /a__{w} \approx 3.722 \times 10^{-67} kg$$. The corresponding ratioes with electron mass(Fig.1) corresponds respectively to n = 24 and n = Γ , the Atiyah constant, see Section III.VIII.
+graviton mass being $$m_{gr} = m_{ph} /a__{w} \approx 3.722 \times 10^{-67} kg$$. The corresponding ratios with electron mass(Fig.1) corresponds respectively to n = 24 and $n = \Gamma$ , the Atiyah constant, see Section III.VIII.
 
 \section {The Kotov Cosmic Coherent Oscillation Period}
 
@@ -284,15 +284,15 @@ This is evident from Fig. 2, which shows the resonance spectrum $F(\nu)$, calcul
 motions of 12 largest, fast spinning, objects of the system (with the mean diameters ≥ 500 km and
 periods < 2 days: six planets, three asteroids and three satellites, leaving apart trans-neptunian
 objects; see Kotov, 2018). The peak of the best commensurability corresponds to a period of
-9594(65) s, which coincides well, within the error limits, with t K at about 5.3σ C.L., i.e. with a
+9594(65) s, which coincides well, within the error limits, with $t_K$ at about 5.3σ C.L., i.e. with a
 chance probability $10^{-7}$ .
 It seems very puzzling also that the spatial scale $t_{K} \approx 19.24 A.U.$ occurs to be the best
 commensurate with orbital sizes of the main planetary orbits of the solar system, – see Fig. 3,
-where the resonance spectrum F(\nu) is plotted for 11 orbits, including those of asteroid belt, Pluto
+where the resonance spectrum $F(\nu)$ is plotted for 11 orbits, including those of asteroid belt, Pluto
 and Eris (orbital «diameters» were approximated by the major axes, and for the inner orbits they
-were multiplied by π). The primary peak – of the best commensurability – corresponds to the
+were multiplied by $\pi$). The primary peak – of the best commensurability – corresponds to the
 spacial scale 9600(120) light sec., or 19.24(3) A.U., at 4.7σ C.L. (Kotov, 2013)
-Close binaries are characterized by the t 0 resonance too, with the π number as a factor of ideal
+Close binaries are characterized by the t 0 resonance too, with the $\pi$ number as a factor of ideal
 incommensurability of motions, or frequencies (Kotov, 2018). Fig. 4 shows the resonance spectrum,
 or metrics of motion, $F_{1} (\nu) \equiv F(\pi \cdot \nu/2)$, computed for 5746 close binaries, including cataclysmic
 variables and related objects. The major peak, with C.L. of about 7σ, corresponds to the timescale
@@ -304,7 +304,7 @@ deviations. Here $\nu$ is the test frequency, $ν_{i}$ minus the frequency of a 
 ordinal number, with N, the total number of observed periods in a sample of objects, and the power
 k = 1 or –1. The factor of two in Eq. (2) takes into account that second half of the orbit repeats the
 first one, and the transcendental number π appears as a factor of orbital stability, or «ideal»
-incommensurability, of motions, or frequencies (the π number, in fact, characterizes geometry of
+incommensurability, of motions, or frequencies (the $\pi$ number, in fact, characterizes geometry of
 space; for details see Kotov, 2018).
 Recently it was shown, that the $t_{\Tetha}$ timescale characterizes, statistically, the motion of superfast
 exoplanets too, see Figure 5.
