--- a/chapter1.tex
+++ b/chapter1.tex
@@ -167,14 +167,14 @@ of the mass-equivalent M of the visible Universe: $m = M/N_{m}$ , and its canoni
 allowing the following holographic extension of the above mono-radial holographic conservation:
 $$S_{BH} = \pi(R/l_{P})^{2} = \frac{2\pi \cdot R}{\lambdabar_{M}} = \frac{2\pi \cdot N_{m}\ cdot R}{\lambdabar_{m}}$$
 This series of large circles generates, by scanning, the approximation of a sphere: one thus passes
-from the Disk to the Sphere. Note that this justifies the factor $1⁄4$ in the above BH entropy. But, for
+from the Disk to the Sphere. Note that this justifies the factor $\frac{1}{4}$ in above BH entropy. But, for
 the approximation to be sufficient, the numbers $N_{m}$ must be very large. In this way, the Cosmos-
 Computer can use the computational properties of the mathematical constants of the continuous
 analysis, such as $\pi$ (See Section III).
 The immensity of the Cosmos thus receives a much simpler computo-holographic explanation than
 that of standard cosmology, where initial conditions, during Planck's time, would be adjusted with
 extreme precision, even with inflation. By identifying the large number of Eddington $N_{Ed} = 136 \cdot
-2^{256}$ as the equivalent number of neutrons in the effective mass $3M/10$ this leads to $R \approx 13,805
+2^{256}$ as the equivalent number of neutrons in the effective mass $\frac{3M}{10}$ this leads to $R \approx 13,805
 Gly$ at $0.05\%$of the above value.
 In the Hydrogen gravitational molecule model, R is defined by the following 1D-2D-3D Special
 Holographic Relation, where the wavelengths of the Electron, Proton, and Atomic and Molecular
