--- a/chapter1.tex
+++ b/chapter1.tex
@@ -210,17 +210,17 @@ following considerations and observations confirm this hypothesis.
 The single-electron cosmology [3] uses the electron indeterminacy, which is the real basis of the
 Exclusion Principle, giving an horizon value R 1 only dependent of the Hydrogen radius $a\prime = aH/p$. It
 is the value for which the mean cosmic value is also the atomic one:
-$$\sum(1/n)/\sum(1/n 2 ) = a\prime$$
+$$\frac{\sum(1/n)}{\sum(1/n^{2})} = a\prime$$
 with the sum running from 2 to $R_{1} /\lambdabar_{e}$ . This implies:
 $R_{1} = \lambdabar_{e} exp((\pi^{2} /6 - 1)a\prime + 1 - \gamma) \approx 15.77465 Gly$
-very close (0.4 ppm) to the following expression, where $p G = P/2 127/2$ , and $\beta = (Η-p) -1$ is the
+very close (0.4 ppm) to the following expression, where $p_{G} = P/2^{127}/2$ , and $\beta = (H - p)^{-1}$ is the
 Rydbergh correction factor and $p_{0} = 6\pi^{5}$ the Canonic Lenz-Wiler Approximation of p:
 $R_{1} = ( p_{0} /p_{G} ) \sqrt{(\beta R R\prime)}$.
 
-Now, with the Kotov length $l_{K} = ct_{K}$ , see below, one notes that $\sqrt{(R/a w l K )}$ is close to \sqrt{a}, while
-the replacement of R by $R_{1}$ is about 4 π , the canonical form for $\sqrt{a}$, the deviation being compatible
-with $p/p_{0}$ , where $p_{0} = 6π^{5}$ is the Lenz-Wyler approximation for p (Section III.I):
-$$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \Leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from G. 
+Now, with the Kotov length $l_{K} = ct_{K}$ , see below, one notes that $\sqrt{(\frac{R}{a_{w} l_{K}})}$ is close to $\sqrt{a}$, while
+the replacement of R by $R_{1}$ is about $4\pi$ , the canonical form for $\sqrt{a}$, the deviation being compatible
+with $p/p_{0}$ , where $p_{0} = 6\pi^{5}$ is the Lenz-Wyler approximation for p (Section III.I):
+$$\sqrt{(R_{1} /a_{w} l_{K})} \approx frac{4\pi^{p}}{p_{0}} \Leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from G. 
 
 This $t_K$ value will be confirmed, in the ppb range, by the value
 deduced from $t_{K} /t_{e} = \sqrt{(a_{G} a_{w})}$, see below, using values of $a_{w} and a_{G}$ connecting, again in the ppb
