--- a/chapter1.tex
+++ b/chapter1.tex
@@ -226,8 +226,8 @@ This $t_K$ value will be confirmed, in the ppb range, by the value
 deduced from $t_{K} /t_{e} = \sqrt{(a_{G} a_{w})}$, see below, using values of $a_{w} and a_{G}$ connecting, again in the ppb
 range, with $\Gamma$, the Atiyah Constant (section III.V).
 From the Holographic two-step interaction [3], it was deduced that the Kotov period is
-associated with the photon mass. With the above value, it is $$m_{ph} = \lambdabar/c 2 t_{K} ≈ 1.222 \times 10^{-55} kg$$, the
-graviton mass being $$m_{gr} = m_{ph} /a__{w} \approx 3.722 \times 10^{-67} kg$$. The corresponding ratios with electron mass(Fig.1) corresponds respectively to n = 24 and $n = \Gamma$ , the Atiyah constant, see Section III.VIII.
+associated with the photon mass. With the above value, it is $$m_{ph} = \lambdabar/c^{2} t_{K} \approx 1.222 \times 10^{-55} kg$$, the
+graviton mass being $$m_{gr} = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} kg$$. The corresponding ratios with electron mass(Fig.1) corresponds respectively to n = 24 and $n = \Gamma$ , the Atiyah constant, see Section III.VIII.
 
 \section {The Kotov Cosmic Coherent Oscillation Period}
 
@@ -241,7 +241,7 @@ The weak coupling constant [1] $a_{w} = (E_{F} /m_{e} c^{2} )^{2}$ is defined fr
 292.806161(6) GeV \approx 573007.33(25) m_e c^{2}$ , itself tied to the weak force constant $$G_{F} \equiv (\hbar c)^{3} /E_{F}^{2} \approx
 1.4358509(7) \times 10^{-62} Joule \cdot m^3 $$[10]. This introduces the product of two area speeds, confirming the
 flickering hypothesis:
-$$(\lambdabar_{e} 2/t_{K} )(hbar/√(m_{p} m_{H} )) = \sqrt{(GG_{F})}$$
+$$(\lambdabar_{e} 2/t_{K} )(hbar/\sqrt{(m_{p} m_{H})}) = \sqrt{(GG_{F})}$$
 so the best measured cosmic quantity, the Kotov period, implies a symmetrization between
 gravitation and weak nuclear force. This specifies the G value to $10^-{6}$ precision (ppm). It is
 compatible with the well-elaborate $10^{-5}$ BIPM measurement [11], at several sigmas from the Codata
@@ -272,27 +272,27 @@ long before its actual discovery in 1974. Namely, 73 years ago, French amateur a
 son (1/9 de jour), a joué un rôle essentiel dans la distribution des planètes supérieures». Presumably,
 the Sevin's «vibration period» of the Sun was merely an issue of his reflections about resonances
 and distances inside the solar system. Nevertheless, solar pulsations with exactly that period were
-discovered, after decades, – and independently of the Sevin's paper, – by a few groups of
+discovered, after decades, - and independently of the Sevin's paper, - by a few groups of
 astrophysicists. Soon the presence of the same period, or timescale, was found in other objects of
 Cosmos too (see Kotov, 2018, and references therein) .
-Opponents emphasize often that $t_{K}$ is very close to 9^{th} harmonic of the mean terrestrial day: thecorresponding ratio – of the length of a day to the $t_{K}$ period – is equal to 8.99943(1), – and claim
+Opponents emphasize often that $t_{K}$ is very close to 9th harmonic of the mean terrestrial day: thecorresponding ratio – of the length of a day to the $t_{K}$ period – is equal to 8.99943(1), – and claim
 thus the $t_{K}$ oscillation of the Sun should be regarded as an artifact (see, e.g., Grec and Fossat, 1979;
-Fossat et al., 2017). As a matter of fact, however, the t_K period occurs to be the best commensurate
+Fossat et al., 2017). As a matter of fact, however, the $t_{K}$ period occurs to be the best commensurate
 timescale for the spin rates of all the most massive and fast-rotating bodies of the solar system, in
 general.
-This is evident from Fig. 2, which shows the resonance spectrum $F(\nu)$, calculated for 15
-motions of 12 largest, fast spinning, objects of the system (with the mean diameters ≥ 500 km and
+This is evident from Fig. 2, which shows the resonance spectrum $F( \nu )$, calculated for 15
+motions of 12 largest, fast spinning, objects of the system (with the mean diameters $\geq 500$ km and
 periods < 2 days: six planets, three asteroids and three satellites, leaving apart trans-neptunian
 objects; see Kotov, 2018). The peak of the best commensurability corresponds to a period of
 9594(65) s, which coincides well, within the error limits, with $t_K$ at about 5.3σ C.L., i.e. with a
 chance probability $10^{-7}$ .
 It seems very puzzling also that the spatial scale $t_{K} \approx 19.24 A.U.$ occurs to be the best
 commensurate with orbital sizes of the main planetary orbits of the solar system, – see Fig. 3,
-where the resonance spectrum $F(\nu)$ is plotted for 11 orbits, including those of asteroid belt, Pluto
+where the resonance spectrum $F( \nu )$ is plotted for 11 orbits, including those of asteroid belt, Pluto
 and Eris (orbital «diameters» were approximated by the major axes, and for the inner orbits they
 were multiplied by $\pi$). The primary peak – of the best commensurability – corresponds to the
-spacial scale 9600(120) light sec., or 19.24(3) A.U., at 4.7σ C.L. (Kotov, 2013)
-Close binaries are characterized by the t 0 resonance too, with the $\pi$ number as a factor of ideal
+spacial scale 9600(120) light sec., or 19.24(3) A.U., at $4.7\tetha$ C.L. (Kotov, 2013)
+Close binaries are characterized by the $t_{\Theta}$ resonance too, with the $\pi$ number as a factor of ideal
 incommensurability of motions, or frequencies (Kotov, 2018). Fig. 4 shows the resonance spectrum,
 or metrics of motion, $F_{1} (\nu) \equiv F(\pi \cdot \nu/2)$, computed for 5746 close binaries, including cataclysmic
 variables and related objects. The major peak, with C.L. of about 7σ, corresponds to the timescale
@@ -318,8 +318,8 @@ timescales would coincide by chance is near $3 \cdot 10^{-4}$).
 \centering
 \includegraphics[width=0.5\textwidth]{./figures/figure}
 \caption{Resonance-spectrum F(ν) computed for 15 motions of the largest, fast-spinning bodies of
-the solar system. On horizontal axis is logarithm of frequency ν (in μHz), the dashed horizontal line
-shows a 3σ C.L., and the primary peak corresponds to the best-commensurable period 9594(65) s.}
+the solar system. On horizontal axis is logarithm of $frequency \nu in \muHz$, the dashed horizontal line
+shows a $3\tetha$ C.L., and the primary peak yields to the best-commensurable period 9594(65) s.}
 \label{fig:figure_label}
 \end{figure}
 
@@ -353,7 +353,7 @@ at nearly 3.9σ significance (after Kotov, 2018).}
 \section {The Tifft, Arp and Pioneer effects}
 
 Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift [14]. Now this
-speed v 1 is compatible with $c/v 1 \approx \sqrt{a_{w} /a} = F/a$, corresponding to the quantum resonance $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$, where $r_{e} = \lambdabar_{e} /a$ is the electron classical radius and $m_{F} = m_{e} \sqrt{a_{w}}$ is the Fermi mass, close to the mean DNA nucleotide mass [3].
+speed $v_{1}$ is compatible with $\frac{c}{v_{1}} \approx \sqrt{a_{w} /a} = \frac{F}{a}$, corresponding to the quantum resonance $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$, where $r_{e} = \frac{\lambdabar_{e}}{a}$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass, close to the mean DNA nucleotide mass [3].
 The Halton Arp observations of chains of galaxies with different redshifts [15] was also
 rejected. But it could be the sign of the galactic regeneration maintaining constant the visible
 Universe mass: this is confirmed by the following confirmation of the invariance of the mean mass
