--- a/chapter1.tex
+++ b/chapter1.tex
@@ -275,7 +275,7 @@ and distances inside the solar system. Nevertheless, solar pulsations with exact
 discovered, after decades, - and independently of the Sevin's paper, - by a few groups of
 astrophysicists. Soon the presence of the same period, or timescale, was found in other objects of
 Cosmos too (see Kotov, 2018, and references therein) .
-Opponents emphasize often that $t_{K}$ is very close to 9th harmonic of the mean terrestrial day: thecorresponding ratio – of the length of a day to the $t_{K}$ period – is equal to 8.99943(1), – and claim
+Opponents emphasize often that $t_{K}$ is very close to the 9th harmonic of the mean terrestrial day: thecorresponding ratio - of the length of a day to the $t_{K}$ period - is equal to 8.99943(1), - and claim
 thus the $t_{K}$ oscillation of the Sun should be regarded as an artifact (see, e.g., Grec and Fossat, 1979;
 Fossat et al., 2017). As a matter of fact, however, the $t_{K}$ period occurs to be the best commensurate
 timescale for the spin rates of all the most massive and fast-rotating bodies of the solar system, in
@@ -284,7 +284,7 @@ This is evident from Fig. 2, which shows the resonance spectrum $F( \nu )$, calc
 motions of 12 largest, fast spinning, objects of the system (with the mean diameters $\geq 500$ km and
 periods < 2 days: six planets, three asteroids and three satellites, leaving apart trans-neptunian
 objects; see Kotov, 2018). The peak of the best commensurability corresponds to a period of
-9594(65) s, which coincides well, within the error limits, with $t_K$ at about 5.3σ C.L., i.e. with a
+9594(65) s, which coincides well, within the error limits, with $t_K$ at about $5.3\tetha$ C.L., i.e. with a
 chance probability $10^{-7}$ .
 It seems very puzzling also that the spatial scale $t_{K} \approx 19.24 A.U.$ occurs to be the best
 commensurate with orbital sizes of the main planetary orbits of the solar system, – see Fig. 3,
@@ -295,7 +295,7 @@ spacial scale 9600(120) light sec., or 19.24(3) A.U., at $4.7\tetha$ C.L. (Kotov
 Close binaries are characterized by the $t_{\Theta}$ resonance too, with the $\pi$ number as a factor of ideal
 incommensurability of motions, or frequencies (Kotov, 2018). Fig. 4 shows the resonance spectrum,
 or metrics of motion, $F_{1} (\nu) \equiv F(\pi \cdot \nu/2)$, computed for 5746 close binaries, including cataclysmic
-variables and related objects. The major peak, with C.L. of about 7σ, corresponds to the timescale
+variables and related objects. The major peak, with C.L. of about $7\tetha$, corresponds to the timescale
 9590(70) s, coinciding within the error limits with $t_{K}$ (the stellar data were taken from all available
 binary stars catalogues and original papers).
 To compute the $F_{1} (\nu)$ spectrum, the program finds – for each test frequency ν – deviations of
@@ -369,13 +369,13 @@ rational numbers. However, the addition of measures of different categories has 
 This seems at first sight illogical, since, fundamentally, a product is a sum of additions. So there
 must be a hidden common nature for the 3 categories, mass, length and time. This sustains the
 above single electron cosmic model [3]. Moreover, this mimics the Fundamental Principle of
-Arithmetics, founded on prime numbers, but limited to the three M, L and T categories. Indeed, with t =
-R/c, summing the square of $ln(M\prime/m_{e} )$, where $M\prime = R\prime c 2 /2G$ is the critical mass in the above
+Arithmetics, founded on prime numbers, but limited to the three M, L and T categories. Indeed, with $t =
+R/c$, summing the square of $ln(M\prime/m_{e} )$, where $M\prime = R\prime c 2 /2G$ is the critical mass in the above
 holographic sphere representing the Grandcosmos, and the square of $ln(R/\lambdabar_{e} ) = ln(t/t_{e} )$, one gets, to
 40 ppm:
-$$ln 2 (M\prime/m_{e} ) + ln 2 (R/\lambdabar_{e}) + ln 2 (t/t_{e} ) \approx ln 2 (R GC /\lambdabar_{e} )$$
+$$ln 2 (M\prime/m_{e} ) + ln 2 (R/\lambdabar_{e}) + ln 2 (t/t_{e} ) \approx ln 2 (R_{GC} /\lambdabar_{e} )$$
 more precisely, to $10^{-8}$ , corresponding to $10{-7}$ precision on the above G value:
-$$ln(\sqrt{(ln 2 (M\prime/m_{e} )} + ln 2 (R/\lambdabar_{e} ) + ln 2 (t/t_{e} ))) \approx 2e – 1/2a$$
+$$ln(\sqrt{(ln 2 (M\prime/m_{e} )} + ln 2 (R/\lambdabar_{e} ) + ln 2 (t/t_{e} ))) \approx 2e - 1/2a$$
 This is a dramatic geometrical confirmation for the visible Universe – Grandcosmos holographic
 couple.
 Another crucial point in Physics is the existence of invariant fundamental constants. Thus,
@@ -410,7 +410,7 @@ Indeed, even General Relativity in unable to define what is a Galilean frame, wh
 pendulus shows it directly, realizing the Cosmic Microwave Background frame, identified with the
 Grandcosmos frame, as seen above.
 Introducing the Fermi constant $G_{F}$ , the associated c-free length is very particular, to $1.7\%$:
-$$l{\hbar,\rho_{c} ,G_{F} } = \hbar/ρ_{c}^{1/2} G_{F}^{1/2} \approx 9.07154 10^{9} m \approx \lambdabar_{e}^{2}/l_{P}$$
+$$l{\hbar,\rho_{c},G_{F}} = \hbar/ρ_{c}^{1/2} G_{F}^{1/2} \approx 9.07154 10^{9} m \approx \lambdabar_{e}^{2}/l_{P}$$
 Now, the following mandatory c-free times are close each over to $0.7\%$:
 $$T{\hbar,\rho_{c} ,G_{F} } = \hbar^{4} /ρ_{c}^{3/2} G_{F}^{5/2} \approx 5.4829 \cdot 10^{57} s$$
 $$T\prime{\hbar,G,m} = \hbar^{3} /G^{2} m^{5} \approx 5.5224 \times 10^{57} s$$
