--- a/chapter1.tex
+++ b/chapter1.tex
@@ -284,22 +284,22 @@ This is evident from Fig. 2, which shows the resonance spectrum $F( \nu )$, calc
 motions of 12 largest, fast spinning, objects of the system (with the mean diameters $\geq 500$ km and
 periods < 2 days: six planets, three asteroids and three satellites, leaving apart trans-neptunian
 objects; see Kotov, 2018). The peak of the best commensurability corresponds to a period of
-9594(65) s, which coincides well, within the error limits, with $t_K$ at about $5.3\tetha$ C.L., i.e. with a
+9594(65) s, which coincides well, within the error limits, with $t_K$ at about $5.3 \tetha$ C.L., i.e. with a
 chance probability $10^{-7}$ .
 It seems very puzzling also that the spatial scale $t_{K} \approx 19.24 A.U.$ occurs to be the best
-commensurate with orbital sizes of the main planetary orbits of the solar system, – see Fig. 3,
+commensurate with orbital sizes of the main planetary orbits of the solar system, - see Fig. 3,
 where the resonance spectrum $F( \nu )$ is plotted for 11 orbits, including those of asteroid belt, Pluto
 and Eris (orbital «diameters» were approximated by the major axes, and for the inner orbits they
-were multiplied by $\pi$). The primary peak – of the best commensurability – corresponds to the
-spacial scale 9600(120) light sec., or 19.24(3) A.U., at $4.7\tetha$ C.L. (Kotov, 2013)
+were multiplied by $\pi$). The primary peak - of the best commensurability - corresponds to the
+spatial scale 9600(120) light sec., or 19.24(3) A.U., at $4.7 \tetha$ C.L. (Kotov, 2013)
 Close binaries are characterized by the $t_{\Theta}$ resonance too, with the $\pi$ number as a factor of ideal
 incommensurability of motions, or frequencies (Kotov, 2018). Fig. 4 shows the resonance spectrum,
 or metrics of motion, $F_{1} (\nu) \equiv F(\pi \cdot \nu/2)$, computed for 5746 close binaries, including cataclysmic
-variables and related objects. The major peak, with C.L. of about $7\tetha$, corresponds to the timescale
+variables and related objects. The major peak, with C.L. of about $7 \tetha$, corresponds to the timescale
 9590(70) s, coinciding within the error limits with $t_{K}$ (the stellar data were taken from all available
 binary stars catalogues and original papers).
-To compute the $F_{1} (\nu)$ spectrum, the program finds – for each test frequency ν – deviations of
-ratios $(2\nu i /\pi \nu) k ≥ 1$ from the nearest integers, and determines then the least-square minimum of such
+To compute the $F_{1} (\nu)$ spectrum, the program finds - for each test frequency $\nu$ - deviations of
+ratios $(2\nu_{i} /\pi \nu) k \geq 1$ from the nearest integers, and determines then the least-square minimum of such
 deviations. Here $\nu$ is the test frequency, $ν_{i}$ minus the frequency of a given object, i = 1, 2, ...N – the
 ordinal number, with N, the total number of observed periods in a sample of objects, and the power
 k = 1 or –1. The factor of two in Eq. (2) takes into account that second half of the orbit repeats the
